--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,10 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
-Test2.js
-Test.js
 Test*.js
 jsconfig.json
+/backend/node_modules
+/backend/node_modules/.env
 
 # macOS
 .DS_Store
