Finished with upload for listing and started working the APIs in the app

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@ web-build/
 Test*.js
 jsconfig.json
 /backend/node_modules
-/backend/node_modules/.env
+/backend/uploads
+/backend/.env
 
 # macOS
 .DS_Store
