--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
     "yup": "^0.29.1",
-    "expo-secure-store": "~9.0.1"
+    "expo-secure-store": "~9.0.1",
+    "react-native-maps": "0.27.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
